# real-yew-app

./: .env  Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs
src/components/: mod.rs
src/services/: requests.rs
